trybuild-qcell/src/compiletest/tlcell-02.stderr
error[E0308]: mismatched types
  --> src/compiletest/tlcell-02.rs:18:28
   |
18 |     let c1ref = owner_b.ro(&*c1);   // Compile error
   |                         -- ^^^^ expected `&TLCell<MarkerB, _>`, found `&TLCell<MarkerA, u32>`
   |                         |
   |                         arguments to this method are incorrect
   |
   = note: expected reference `&TLCell<MarkerB, _>`
              found reference `&TLCell<MarkerA, u32>`
note: method defined here
  --> $QCELL/src/tlcell.rs
   |
   |     pub fn ro<'a, T: ?Sized>(&'a self, tc: &'a TLCell<Q, T>) -> &'a T {
   |            ^^
